avoid add widget modal being too high for viewport
The ee notification is now placed within the part that determines the height and is made sticky to ensure that it is always visible. This is a quick fix as it is planned to restyle the add modal.

--- a/app/assets/stylesheets/content/_grid.sass
+++ b/app/assets/stylesheets/content/_grid.sass
@@ -240,3 +240,9 @@ $grid--widget-padding: 20px
   @include widget-box--style
   margin-left: -$grid--widget-padding
   margin-top: -$grid--widget-padding
+
+.grid--add-widget-ee
+  .notification-box
+    position: sticky
+    bottom: 0
+    margin-bottom: 0
